--- a/weckan/static/less/variables.less
+++ b/weckan/static/less/variables.less
@@ -18,6 +18,7 @@
 @navbar-default-bg: @bg-dark;
 @navbar-default-color: white;
 @navbar-default-link-color: white;
+@grid-float-breakpoint: 500px;
 
 // Common navs
 @nav-link-hover-bg: lighten(@highlight, 5%);
